--- a/css/style.css
+++ b/css/style.css
@@ -26,29 +26,10 @@ table {
 	width: 100%;
 }
 
-#home {
-	width: 100px;
-	height: 100px;
-}
-
-#about {
-	width: 100px;
-	height: 100px;
-}
-
-#donuts {
-	width: 100px;
-	height: 100px;
-}
-
-#delivery {
-	width: 100px;
-	height: 100px;
-}
-
-#contact {
-	width: 100px;
-	height: 100px;
+table th {
+	text-align: left;
+	text-transform: uppercase;
+	font-size: 1.2em;
 }
 
 #menu {
