--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 body {
-	background-color: #FFA7E3;
 	background-image: url('../img/background.png');
 	background-size: cover;
 	height: 100%;
+	background-attachment: fixed;
 	background-repeat: no-repeat;
 }
 
